# trade_v2

./: .env.example  .gitignore  CONTEXT.md  GUIDE.md  README.md  TODO.md  config.yaml  pyproject.toml  run_backtest.py  run_orchestrator.py  start_bot.bat  tail_logs.py  web_logs.py
src/ait/: __init__.py  main.py
src/ait/backtesting/: __init__.py  engine.py  learner.py  options_sim.py  result.py  walkforward.py
src/ait/bot/: orchestrator.py  scheduler.py  state.py
src/ait/broker/: __init__.py  account.py  contracts.py  ibkr_client.py  orders.py
src/ait/config/: __init__.py  settings.py
src/ait/dashboard/: app.py
src/ait/data/: __init__.py  cache.py  earnings.py  economic_calendar.py  edgar_filings.py  historical.py  macro.py  market_data.py  multi_timeframe.py  options_chain.py  options_flow.py  quality.py
src/ait/execution/: executor.py  portfolio.py  reconciler.py
src/ait/learning/: __init__.py  adaptor.py  analyzer.py  counterfactual.py  engine.py
src/ait/ml/: __init__.py  directional.py  drift.py  ensemble.py  features.py  meta_label.py  range_predictor.py  regime.py  trainer.py  vol_magnitude_predictor.py
src/ait/monitoring/: __init__.py  analytics.py  duckdb_analytics.py  watchdog.py
src/ait/notifications/: telegram.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_counterfactual.py  test_data_quality.py  test_drift.py  test_duckdb_analytics.py  test_dynamic_exits.py  test_learning.py  test_multi_timeframe.py  test_pdt_guard.py  test_phase3.py  test_position_sizer.py  test_thompson.py  test_walkforward.py  test_watchdog.py
(+28 files in other folders)
